--- a/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
+++ b/WebApplication1/WebApplication1/Views/Shared/_Layout.cshtml
@@ -23,7 +23,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("DentisCard", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @if (ViewContext.HttpContext.User.IsInRole("Dentist"))
+                {
+                    @Html.ActionLink("DentisCard", "Index", "Dentist", new { area = "" }, new { @class = "navbar-brand" })
+                }
+                @if (ViewContext.HttpContext.User.IsInRole("Patient"))
+                {
+                     @Html.ActionLink("DentisCard", "Index", "Patient", new { area = "" }, new { @class = "navbar-brand" })
+                }
+                @if (ViewContext.HttpContext.User.IsInRole("Admin"))
+                {
+                     @Html.ActionLink("DentisCard", "Index", "Admin", new { area = "" }, new { @class = "navbar-brand" })
+                }
+               
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
