--- a/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
+++ b/WebApplication1/WebApplication1/Views/Dentist/Index.cshtml
@@ -3,12 +3,36 @@
 }
 <head>
     <link href="~/Content/css/CustomLeftNavbar.css" rel="stylesheet" />
+    <link href="~/Content/css/CustomProfile.css" rel="stylesheet" />
 </head>
 
-<div class="jumbotron">
-    <p class="lead">Welcome to Dentist Home page</p>
-    <p><a href="" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<!--Dodat i namjesten ovaj dio za profil informacije, kad se vratim sa odmora ili eventualno malo tamo povezem s tim da ce mozda trebati pomoc od emira u vezi kupljenja informacija-->
+<div class="container my-custom-container">
+<div class="profile-head">
+<div class="col-md- col-sm-4 col-xs-12">
+<img src="http://www.newlifefamilychiropractic.net/wp-content/uploads/2014/07/300x300.gif" class="img-responsive" />
+    <h6>User Name
+    </h6>
 </div>
+
+<div class="col-md-5 col-sm-5 col-xs-12">
+<h5>User Name</h5>
+<p>Dentist </p>
+<ul>
+
+<li><span class="glyphicon glyphicon-briefcase"></span> 5 years</li>
+<li><span class="glyphicon glyphicon-map-marker"></span> BiH</li>
+<li><span class="glyphicon glyphicon-home"></span> Ilidza.</li>
+<li><span class="glyphicon glyphicon-phone"></span> <a href="#" title="call">387612345678</a></li>
+<li><span class="glyphicon glyphicon-envelope"></span><a href="#" title="mail">dentisCard@gmail.com</a></li>
+
+</ul>
+</div>
+
+</div>
+</div>
+
+
 
 
    <div class="container">
@@ -139,7 +163,7 @@
         <div class="col-sm-9 col-md-9">
             <div class="well">
                 <h1>
-                    Content will go here
+                    Content will be displayed here
                 </h1>
 
             </div>
